# autonomous-oncology-board

./: .env.example  .gitattributes  .gitignore  CLAUDE.md  LICENSE  Makefile  PROJECT.md  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: deploy.yml
data/demo_cases/: colon_adenocarcinoma.json  lung_adenocarcinoma.json  lung_squamous_cell.json
docs/: SUBMISSION_CHECKLIST.md  demo_script.md  technical_report.md
docs/build_in_public/: post_01_vram_math.md  post_02_attention_heatmaps.md  post_03_agent_debate.md  post_04_benchmark.md  post_05_concurrent_cases.md  thread_1_amd_mi300x.md  thread_2_agent_debate.md  thread_3_results.md
docs/diagrams/: architecture.excalidraw.json  vram_comparison.md
eval/: ablation_study.py  calibration.py  clinical_eval.py
eval/cases/: clinical_eval_cases.json
frontend/: .env.local.example  .gitignore  README.md  next.config.ts  package-lock.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/components/: AblationChart.tsx  (+24 more)
hf_dataset/: README.md  __init__.py  aob_bench.py
hf_space/: README.md  app.py  requirements.txt
ml/: api.py  board.py  requirements.txt
scripts/: benchmark_speculative.py  bootstrap.sh  container_start_all.sh  deploy.sh  finetune_biomarker.py  finetune_tnm.py  finetune_treatment.py  gen_clinical_eval_cases.py  gen_trials_snapshot.py  golden_path_test.py  index_corpus.py  serve_specialists.sh  serve_specialists_fallback.sh  serve_specialists_peft.py  serve_speculative.sh  serve_tnm_adapter.sh  smoke_test.py  stack_up.sh  stress_test.py  verify_hf_dataset.py  vram_monitor.sh
(+42 files in other folders)
